--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div style="width:260px; height:320px; border-radius:50%; overflow:hidden;">
         <img src="zhaopian.jpg" alt="photo" width=260px; height=320px;>
      </div>
-</body>
+</body><h1> Hi, I'm yiyi. I like computers. I was able to combine my passion for writing with my passion for programming. Writing a diary or a novel can give me a good experience. And love programming
+</h1>
 </html>
