--- a/test1.html
+++ b/test1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+    <div style="width:260px; height:320px; border-radius:50%; overflow:hidden;">
+        <img src="zhaopian.jpg" alt="photo" width=260px; height=320px;>
+     </div>
+</body><h1> 
+    Hi, I'm yiyi. I like computers. I was able to combine my passion for writing with my passion for programming. Writing a diary or a novel can give me a good experience. And love programming
+</h1>
 </html>
