--- a/test2.html
+++ b/test2.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <table cellspacing="20">
+         <tbody>
+            <tr>
+               <td>
+                     <img src="zhaopian2.jpg">
+               </td>
+               <td>
+                    <p>
+                        The first step is to decide the target of the investigation and predict the results. The second step is to design the plan and content of the investigation and decide the time of the investigation. The third step is to start the investigation.
+                    </p>
+                </td>
+            </tr>        
+           </tbody>
+    </table>        
+ <h1>
+     
 </body>
 </html>
